fix spacing

--- a/app/assets/stylesheets/composition/_section.scss
+++ b/app/assets/stylesheets/composition/_section.scss
@@ -1,8 +1,8 @@
-section.section {
+header + section.section {
   margin-top: $baseline*2;
-  margin-bottom: $baseline*2;
 }
 
-section.section + section.section {
+section.section {
   margin-top: 0;
+  margin-bottom: $baseline*2;
 }
